Fixed navbar centering on mobile and created active icon color changes

--- a/src/styles/Nav_Bar.css
+++ b/src/styles/Nav_Bar.css
@@ -3,6 +3,7 @@
     box-shadow: 1px 3px 2px darkslategray;
     border-radius: 10px;
     margin-top: 10px;
+    text-align: center;
   }
   
   .topnav div {
